--- a/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html
+++ b/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html
@@ -15,8 +15,8 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="canonical" href="/" />
-        <link rel="alternate" href="/" hreflang="id-ID" />
+        <link rel="canonical" href="https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html" />
+        <link rel="alternate" href="https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html" hreflang="id-ID" />
         <link rel="shortcut icon" type="image/x-icon" href="https://galerybos01.site/File-PNG/PNG%20192%20x%20192.png" />
         <link rel="apple-touch-icon" href="https://galerybos01.site/File-PNG/PNG%20192%20x%20192.png" />
         <link rel="icon" type="image/x-icon" href="https://galerybos01.site/File-PNG/PNG%20192%20x%20192.png" />
@@ -40,7 +40,7 @@
         <!-- Facebook -->
         <meta property="og:title" content="Ramalam Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01" />
         <meta property="og:description" content="Ramalan Zodiak Kamis, 13 Februari 2025,telah tiba kabar baik bagi zodiak Libra, Virgo, dan Pisces. Hubungan asmara dan masalah keuangan sedang berada diatas angin. Dapatkan bagaimana ramalan zodiak dapat mempengaruhi hubungan percintaan dan meraih kejayaan." />
-        <meta property="og:url" content="/" />
+        <meta property="og:url" content="https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html" />
         <meta property="og:image" content="https://galerybos01.site/File-JPG/Banner-ADS/JPG%20BANNER%20BOS%2030%20A%20%281%29.jpg" />
         <meta property="og:image:type" content="image/jpg" />
         <meta property="og:site_name" content="Harian Jakarta" />
@@ -51,7 +51,7 @@
         <meta name="twitter:card" content="Harian Jakarta" />
         <meta name="twitter:title" content="Ramalam Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01" />
         <meta name="twitter:description" content="Ramalan Zodiak Kamis, 13 Februari 2025,telah tiba kabar baik bagi zodiak Libra, Virgo, dan Pisces. Hubungan asmara dan masalah keuangan sedang berada diatas angin. Dapatkan bagaimana ramalan zodiak dapat mempengaruhi hubungan percintaan dan meraih kejayaan." />
-        <meta name="twitter:url" content="/" />
+        <meta name="twitter:url" content="https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html" />
         <meta name="twitter:image" content="https://galerybos01.site/File-JPG/Banner-ADS/JPG%20BANNER%20BOS%2030%20A%20%281%29.jpg" />
         <meta name="twitter:site" content="Harian Jakarta" />
         <meta name="twitter:creator" content="Harian Jakarta" />
@@ -159,7 +159,7 @@
             "@type": "Organization",
             "name": "Harian Jakarta",
             "alternateName": "Ramalam Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01",
-            "url": "/",
+            "url": "https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html",
             "logo": "https://galerybos01.site/File-PNG/PNG%20192%20x%20192.png"
           }
         </script>
@@ -171,12 +171,12 @@
               "@type": "ListItem",
               "position": 1,
               "name": "Home",
-              "item": "/"
+              "item": "https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html"
             }, {
               "@type": "ListItem",
               "position": 2,
               "name": "Harian Jakarta",
-              "item": "/"
+              "item": "https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html"
             }]
           }
         </script>
@@ -186,7 +186,7 @@
             "@type": "NewsArticle",
             "mainEntityOfPage": {
               "@type": "WebPage",
-              "@id": "/"
+              "@id": "https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html"
             },
             "headline": "Ramalam Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01",
             "description": "Ramalan Zodiak Kamis, 13 Februari 2025,telah tiba kabar baik bagi zodiak Libra, Virgo, dan Pisces. Hubungan asmara dan masalah keuangan sedang berada diatas angin. Dapatkan bagaimana ramalan zodiak dapat mempengaruhi hubungan percintaan dan meraih kejayaan.",
@@ -194,7 +194,7 @@
             "author": {
               "@type": "Organization",
               "name": "Harian Jakarta",
-              "url": "/"
+              "url": "https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html"
             },
             "publisher": {
               "@type": "Organization",
@@ -260,7 +260,7 @@
               </tr>
               <tr>
                 <td>Deposit</td>
-                <td>💰 Rp. 10.000</td>
+                <td>💰 Rp. 20.000</td>
               </tr>
               <tr>
                 <td>Metode Transaksi</td>
@@ -298,7 +298,7 @@
         </section>
     
         <section class='n-container m-b-normal'>
-          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="/" class="rainbow-text">Harian Jakarta</a>. All Rights Reserved.</span></div>
+          <div class='container' style='text-align: center;'><span>&copy; 2025 <a href="https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html" class="rainbow-text">Harian Jakarta</a>. All Rights Reserved.</span></div>
         </section>
       </body>
       </html>
