--- a/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html
+++ b/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html
@@ -21,7 +21,7 @@
         <link rel="apple-touch-icon" href="https://galerybos01.site/File-PNG/PNG%20192%20x%20192.png" />
         <link rel="icon" type="image/x-icon" href="https://galerybos01.site/File-PNG/PNG%20192%20x%20192.png" />
         <!-- Website -->
-        <title>Ramalam Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01 </title>
+        <title>Ramalan Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01 </title>
         <meta name="description" content="Ramalan Zodiak Kamis, 13 Februari 2025,telah tiba kabar baik bagi zodiak Libra, Virgo, dan Pisces. Hubungan asmara dan masalah keuangan sedang berada diatas angin. Dapatkan bagaimana ramalan zodiak dapat mempengaruhi hubungan percintaan dan meraih kejayaan." />
         <meta name="keywords" content="BOS01" />
         <meta name="categories" content="website" />
@@ -38,7 +38,7 @@
         <meta name="geo.region" content="ID" />
         <meta name="tgn.nation" content="Indonesia" />
         <!-- Facebook -->
-        <meta property="og:title" content="Ramalam Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01" />
+        <meta property="og:title" content="Ramalan Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01" />
         <meta property="og:description" content="Ramalan Zodiak Kamis, 13 Februari 2025,telah tiba kabar baik bagi zodiak Libra, Virgo, dan Pisces. Hubungan asmara dan masalah keuangan sedang berada diatas angin. Dapatkan bagaimana ramalan zodiak dapat mempengaruhi hubungan percintaan dan meraih kejayaan." />
         <meta property="og:url" content="https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html" />
         <meta property="og:image" content="https://galerybos01.site/File-JPG/Banner-ADS/JPG%20BANNER%20BOS%2030%20A%20%281%29.jpg" />
@@ -49,7 +49,7 @@
         <meta property="og:type" content="website" />
         <!-- Twitter -->
         <meta name="twitter:card" content="Harian Jakarta" />
-        <meta name="twitter:title" content="Ramalam Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01" />
+        <meta name="twitter:title" content="Ramalan Zodiak untuk Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01" />
         <meta name="twitter:description" content="Ramalan Zodiak Kamis, 13 Februari 2025,telah tiba kabar baik bagi zodiak Libra, Virgo, dan Pisces. Hubungan asmara dan masalah keuangan sedang berada diatas angin. Dapatkan bagaimana ramalan zodiak dapat mempengaruhi hubungan percintaan dan meraih kejayaan." />
         <meta name="twitter:url" content="https://harianjakarta-01.github.io/jakarta-info-viral/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html" />
         <meta name="twitter:image" content="https://galerybos01.site/File-JPG/Banner-ADS/JPG%20BANNER%20BOS%2030%20A%20%281%29.jpg" />
