--- a/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html
+++ b/ramalan-zodiak-13-februari-2025-hubunganasmara-keuangan/index.html
@@ -281,7 +281,7 @@
         <section class='n-container m-b-normal'>
           <article class='bg-container contain'>
             <div class='article'>
-            <h1 class="text-center" itemprop="headline"><strong>Ramalam Zodiak  Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01</strong></h1>
+            <h1 class="text-center" itemprop="headline"><strong>Ramalan Zodiak  Kamis, 13 Februari 2025: Hubungan Asmara dan Keuangan Diatas Angin Zodiak Libra, Virgo, dan Pisces! Dapatkan Peluang Big Win Dengan Ramuan Maxwin di BOS01</strong></h1>
             <p style="text-align: justify;">Hubungan Asmara seseorang dapat kita ketahui hanya melalui zodiak yang dia miliki. Pada Kamis, 13 Februari 2025, beberapa zodiak seperti Libra, Vigo dana Pisces saat ini diprediksi memiliki hubungan asmara yang saat ini berada diatas angin.</p>
             <p style="text-align: justify;">Tentunya Prediksi melalui Zodiak ini tidak semata mata hanya ucapan belaka. Ada Beberapa faktor yang mempengaruhi dalam Hubungan Asmara setiap zodiak seperti dilihat dari warna aura yang terpancar dari setiap zodiak pun masing masing berbeda beda, seperti saat ini untuk warna aura zodiak Libra , Vigo dan Pisces adalah berwana biru yang melambangkan kedamaian dan ketenangan.Bagi ketiga zodiak tersebut hari ini adalah saat yang tepat untuk memperbaiki hubungan terhadap pasangan satu sama lain.</p>
             <h2 style="text-align: center;">Prediksi Keuangan Zodiak Libra pada 13 Februari 2025</h2>
